--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.9",
     "@mui/material": "^5.15.9",
+    "@mui/x-date-pickers": "^6.19.4",
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
+    "dayjs": "^1.11.10",
     "next": "14.0.4",
     "react": "^18",
     "react-dnd": "^16.0.1",
