--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.9",
-    "@mui/material": "^5.15.9",
+    "@mui/joy": "^5.0.0-beta.28",
+    "@mui/material": "^5.15.10",
     "@mui/x-date-pickers": "^6.19.4",
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "dayjs": "^1.11.10",
+    "json-stringify": "^1.0.0",
+    "moment": "^2.30.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dnd": "^16.0.1",
